Added def read_vtb_broker_reports

--- a/Statment_processing.ipynb
+++ b/Statment_processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -489,6 +489,36 @@
     "\n",
     "    return transactions\n",
     "\n",
+    "def read_vtb_broker_reports(path):\n",
+    "    \"\"\"Считываем данные по движению денежных средств из брокерского отчёта Банка ВТБ в формате xml\"\"\"\n",
+    "    \n",
+    "    directory = r'C:/Users/gdoku/YandexDisk/Документы/Договоры/Банк ВТБ (ПАО)/'\n",
+    "    files = os.listdir(os.path.join(directory, path))\n",
+    "    counter = 0   \n",
+    "    \n",
+    "    # Считываем данные из файлов\n",
+    "    for file in files:\n",
+    "        tree = ET.parse(os.path.join(directory, path, file))    \n",
+    "        root = tree.getroot()\n",
+    "        for i in range(2):\n",
+    "            json = xmljson.gdata.data(root[11][0][i][0])\n",
+    "            json = json['{report577p_v1}Подробности16_Collection']['{report577p_v1}Подробности16']\n",
+    "            data = pd.DataFrame(json)\n",
+    "            if counter == 0:\n",
+    "                transactions = data\n",
+    "                counter += 1\n",
+    "            else:\n",
+    "                transactions = transactions.append(data, ignore_index=True) \n",
+    "                \n",
+    "    # Обработка данных\n",
+    "    transactions.columns = ['date', 'amount', 'currency', 'description', 'notes']\n",
+    "    transactions = transactions[transactions.currency == 'RUR']\n",
+    "    transactions.date = pd.to_datetime(transactions.date, format='%Y-%m-%d')\n",
+    "    transactions.description = transactions.description + '; ' + transactions.notes\n",
+    "    transactions = transactions[['date', 'amount', 'description']]\n",
+    "    transactions = transactions.sort_values(by=['date'])\n",
+    "\n",
+    "    return transactions\n",
     "\n",
     "def upload_data(syn_acc, anal_acc, transactions):\n",
     "    upload_to_base(syn_acc, anal_acc, transactions)\n",
