--- a/VTB_broker_report.ipynb
+++ b/VTB_broker_report.ipynb
@@ -2,20 +2,140 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
-     "ename": "UnboundLocalError",
-     "evalue": "local variable 'transactions' referenced before assignment",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-9-db831a7af1a2>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     28\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     29\u001b[0m \u001b[0mpath\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34mr'Брокерские отчёты XML/'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 30\u001b[1;33m \u001b[0mtransactions\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mread_vtb_broker_reports\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     31\u001b[0m \u001b[0mtransactions\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-9-db831a7af1a2>\u001b[0m in \u001b[0;36mread_vtb_broker_reports\u001b[1;34m(path)\u001b[0m\n\u001b[0;32m     21\u001b[0m         \u001b[0mjson\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mxmljson\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mparker\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mroot\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     22\u001b[0m         \u001b[0mroot\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m11\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mattrib\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 23\u001b[1;33m         \u001b[0mjson\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mxmljson\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgdata\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtransactions\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m11\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     24\u001b[0m         \u001b[0mjson\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'{report577p_v1}Подробности16_Collection'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'{report577p_v1}Подробности16'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     25\u001b[0m         \u001b[0mtransactions\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mjson\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mUnboundLocalError\u001b[0m: local variable 'transactions' referenced before assignment"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>amount</th>\n",
+       "      <th>description</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>2020-01-02</td>\n",
+       "      <td>-445.16</td>\n",
+       "      <td>Вознаграждение Брокера; Разница между суммами по специальным сделкам РЕПО ¹</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>2020-01-02</td>\n",
+       "      <td>-327.96</td>\n",
+       "      <td>Вознаграждение Брокера; Комиссия банка за Спецсделки РЕПО</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>2020-01-02</td>\n",
+       "      <td>329.83</td>\n",
+       "      <td>Сальдо расчётов по сделкам с ценными бумагами;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5</td>\n",
+       "      <td>2020-01-03</td>\n",
+       "      <td>-1336.27</td>\n",
+       "      <td>Вознаграждение Брокера; Разница между суммами по специальным сделкам РЕПО ¹</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>833</td>\n",
+       "      <td>2020-01-03</td>\n",
+       "      <td>31850.00</td>\n",
+       "      <td>Вариационная маржа;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1197</td>\n",
+       "      <td>2020-09-03</td>\n",
+       "      <td>-6.50</td>\n",
+       "      <td>Вознаграждение Брокера; Комиссия за брокерские услуги по проведению расчетов по заключенным сделкам на Срочном рынке</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>831</td>\n",
+       "      <td>2020-09-04</td>\n",
+       "      <td>-936.70</td>\n",
+       "      <td>Сальдо расчётов по сделкам с ценными бумагами;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>830</td>\n",
+       "      <td>2020-09-04</td>\n",
+       "      <td>-275.65</td>\n",
+       "      <td>Вознаграждение Брокера; Комиссия банка за Спецсделки РЕПО</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>832</td>\n",
+       "      <td>2020-09-04</td>\n",
+       "      <td>-244.77</td>\n",
+       "      <td>Вознаграждение Брокера; Разница между суммами по специальным сделкам РЕПО ¹</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1198</td>\n",
+       "      <td>2020-09-04</td>\n",
+       "      <td>1010.00</td>\n",
+       "      <td>Вариационная маржа;</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1199 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           date    amount  \\\n",
+       "0    2020-01-02   -445.16   \n",
+       "1    2020-01-02   -327.96   \n",
+       "2    2020-01-02    329.83   \n",
+       "5    2020-01-03  -1336.27   \n",
+       "833  2020-01-03  31850.00   \n",
+       "...         ...       ...   \n",
+       "1197 2020-09-03     -6.50   \n",
+       "831  2020-09-04   -936.70   \n",
+       "830  2020-09-04   -275.65   \n",
+       "832  2020-09-04   -244.77   \n",
+       "1198 2020-09-04   1010.00   \n",
+       "\n",
+       "                                                                                                               description  \n",
+       "0                                              Вознаграждение Брокера; Разница между суммами по специальным сделкам РЕПО ¹  \n",
+       "1                                                                Вознаграждение Брокера; Комиссия банка за Спецсделки РЕПО  \n",
+       "2                                                                          Сальдо расчётов по сделкам с ценными бумагами;   \n",
+       "5                                              Вознаграждение Брокера; Разница между суммами по специальным сделкам РЕПО ¹  \n",
+       "833                                                                                                   Вариационная маржа;   \n",
+       "...                                                                                                                    ...  \n",
+       "1197  Вознаграждение Брокера; Комиссия за брокерские услуги по проведению расчетов по заключенным сделкам на Срочном рынке  \n",
+       "831                                                                        Сальдо расчётов по сделкам с ценными бумагами;   \n",
+       "830                                                              Вознаграждение Брокера; Комиссия банка за Спецсделки РЕПО  \n",
+       "832                                            Вознаграждение Брокера; Разница между суммами по специальным сделкам РЕПО ¹  \n",
+       "1198                                                                                                  Вариационная маржа;   \n",
+       "\n",
+       "[1199 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -33,17 +153,33 @@
     "    r\"DBQ=C:\\Users\\gdoku\\YandexDisk\\Документы\\Семейные финансы\\FF.accdb;\"\n",
     "\n",
     "def read_vtb_broker_reports(path):\n",
+    "    \"\"\"Считываем данные по движению денежных средств из брокерского отчёта Банка ВТБ в формате xml\"\"\"\n",
+    "    \n",
     "    directory = r'C:/Users/gdoku/YandexDisk/Документы/Договоры/Банк ВТБ (ПАО)/'\n",
     "    files = os.listdir(os.path.join(directory, path))\n",
-    "    counter = 0\n",
+    "    counter = 0   \n",
+    "    \n",
+    "    # Считываем данные из файлов\n",
     "    for file in files:\n",
     "        tree = ET.parse(os.path.join(directory, path, file))    \n",
     "        root = tree.getroot()\n",
-    "        json = xmljson.parker.data(root)\n",
-    "        root[11][0][0][0][0].attrib\n",
-    "        json = xmljson.gdata.data(root[11][0][1][0])\n",
-    "        json = json['{report577p_v1}Подробности16_Collection']['{report577p_v1}Подробности16']\n",
-    "        transactions = pd.DataFrame(json)\n",
+    "        for i in range(2):\n",
+    "            json = xmljson.gdata.data(root[11][0][i][0])\n",
+    "            json = json['{report577p_v1}Подробности16_Collection']['{report577p_v1}Подробности16']\n",
+    "            data = pd.DataFrame(json)\n",
+    "            if counter == 0:\n",
+    "                transactions = data\n",
+    "                counter += 1\n",
+    "            else:\n",
+    "                transactions = transactions.append(data, ignore_index=True) \n",
+    "                \n",
+    "    # Обработка данных\n",
+    "    transactions.columns = ['date', 'amount', 'currency', 'description', 'notes']\n",
+    "    transactions = transactions[transactions.currency == 'RUR']\n",
+    "    transactions.date = pd.to_datetime(transactions.date, format='%Y-%m-%d')\n",
+    "    transactions.description = transactions.description + '; ' + transactions.notes\n",
+    "    transactions = transactions[['date', 'amount', 'description']]\n",
+    "    transactions = transactions.sort_values(by=['date'])\n",
     "\n",
     "    return transactions\n",
     "\n",
