--- a/Statment_processing.ipynb
+++ b/Statment_processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
@@ -326,6 +326,137 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>amount</th>\n",
+       "      <th>description</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>433</td>\n",
+       "      <td>2020-04-01</td>\n",
+       "      <td>251.77</td>\n",
+       "      <td>Сальдо расчётов по сделкам с ценными бумагами;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>436</td>\n",
+       "      <td>2020-04-02</td>\n",
+       "      <td>-4.94</td>\n",
+       "      <td>Вознаграждение Брокера; Комиссия за брокерские услуги по проведению расчетов по заключенным сделкам на Основном рынке</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>438</td>\n",
+       "      <td>2020-04-02</td>\n",
+       "      <td>5000.00</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>439</td>\n",
+       "      <td>2020-04-02</td>\n",
+       "      <td>-2.00</td>\n",
+       "      <td>Вознаграждение Брокера; Комиссия банка за заключение сделок на Срочном рынке</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>440</td>\n",
+       "      <td>2020-04-02</td>\n",
+       "      <td>-5.36</td>\n",
+       "      <td>Вознаграждение Брокера; Комиссия за брокерские услуги по проведению расчетов по заключенным сделкам на Срочном рынке</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1188</td>\n",
+       "      <td>2020-09-02</td>\n",
+       "      <td>-50000.00</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1191</td>\n",
+       "      <td>2020-09-03</td>\n",
+       "      <td>-10515.03</td>\n",
+       "      <td>Сальдо расчётов по сделкам с ценными бумагами;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1195</td>\n",
+       "      <td>2020-09-03</td>\n",
+       "      <td>-1.00</td>\n",
+       "      <td>Вознаграждение Брокера; Комиссия банка за заключение сделок на Срочном рынке</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1196</td>\n",
+       "      <td>2020-09-03</td>\n",
+       "      <td>-6.50</td>\n",
+       "      <td>Вознаграждение Брокера; Комиссия за брокерские услуги по проведению расчетов по заключенным сделкам на Срочном рынке</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1197</td>\n",
+       "      <td>2020-09-04</td>\n",
+       "      <td>-936.70</td>\n",
+       "      <td>Сальдо расчётов по сделкам с ценными бумагами;</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>354 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           date    amount  \\\n",
+       "433  2020-04-01    251.77   \n",
+       "436  2020-04-02     -4.94   \n",
+       "438  2020-04-02   5000.00   \n",
+       "439  2020-04-02     -2.00   \n",
+       "440  2020-04-02     -5.36   \n",
+       "...         ...       ...   \n",
+       "1188 2020-09-02 -50000.00   \n",
+       "1191 2020-09-03 -10515.03   \n",
+       "1195 2020-09-03     -1.00   \n",
+       "1196 2020-09-03     -6.50   \n",
+       "1197 2020-09-04   -936.70   \n",
+       "\n",
+       "                                                                                                                description  \n",
+       "433                                                                         Сальдо расчётов по сделкам с ценными бумагами;   \n",
+       "436   Вознаграждение Брокера; Комиссия за брокерские услуги по проведению расчетов по заключенным сделкам на Основном рынке  \n",
+       "438                                                                                                                     NaN  \n",
+       "439                                            Вознаграждение Брокера; Комиссия банка за заключение сделок на Срочном рынке  \n",
+       "440    Вознаграждение Брокера; Комиссия за брокерские услуги по проведению расчетов по заключенным сделкам на Срочном рынке  \n",
+       "...                                                                                                                     ...  \n",
+       "1188                                                                                                                    NaN  \n",
+       "1191                                                                        Сальдо расчётов по сделкам с ценными бумагами;   \n",
+       "1195                                           Вознаграждение Брокера; Комиссия банка за заключение сделок на Срочном рынке  \n",
+       "1196   Вознаграждение Брокера; Комиссия за брокерские услуги по проведению расчетов по заключенным сделкам на Срочном рынке  \n",
+       "1197                                                                        Сальдо расчётов по сделкам с ценными бумагами;   \n",
+       "\n",
+       "[354 rows x 3 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -565,27 +696,154 @@
     "# Загрузка списка операций по Сбербанку Алены\n",
     "path = r'Алена/'\n",
     "transactions = sberbank_details(path)\n",
-    "upload_data(510, 5, transactions)"
+    "upload_data(510, 5, transactions)\n",
+    "\n",
+    "# Загрузка операций по брокерскому счёту Егора\n",
+    "path = r'Георгий/Брокерские отчёты XML'\n",
+    "transactions = read_vtb_broker_reports(path)\n",
+    "upload_data(761, 0, transactions)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>amount</th>\n",
+       "      <th>description</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>284</td>\n",
+       "      <td>2020-04-01</td>\n",
+       "      <td>-260.77</td>\n",
+       "      <td>Вознаграждение Брокера; Комиссия банка за Спецсделки РЕПО</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>285</td>\n",
+       "      <td>2020-04-01</td>\n",
+       "      <td>251.77</td>\n",
+       "      <td>Сальдо расчётов по сделкам с ценными бумагами;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>286</td>\n",
+       "      <td>2020-04-01</td>\n",
+       "      <td>-338.15</td>\n",
+       "      <td>Вознаграждение Брокера; Разница между суммами по специальным сделкам РЕПО ¹</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>981</td>\n",
+       "      <td>2020-04-01</td>\n",
+       "      <td>-36025.00</td>\n",
+       "      <td>Вариационная маржа;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>292</td>\n",
+       "      <td>2020-04-02</td>\n",
+       "      <td>-4.94</td>\n",
+       "      <td>Вознаграждение Брокера; Комиссия за брокерские услуги по проведению расчетов по заключенным сделкам на Основном рынке</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1197</td>\n",
+       "      <td>2020-09-03</td>\n",
+       "      <td>-6.50</td>\n",
+       "      <td>Вознаграждение Брокера; Комиссия за брокерские услуги по проведению расчетов по заключенным сделкам на Срочном рынке</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>831</td>\n",
+       "      <td>2020-09-04</td>\n",
+       "      <td>-936.70</td>\n",
+       "      <td>Сальдо расчётов по сделкам с ценными бумагами;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>830</td>\n",
+       "      <td>2020-09-04</td>\n",
+       "      <td>-275.65</td>\n",
+       "      <td>Вознаграждение Брокера; Комиссия банка за Спецсделки РЕПО</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>832</td>\n",
+       "      <td>2020-09-04</td>\n",
+       "      <td>-244.77</td>\n",
+       "      <td>Вознаграждение Брокера; Разница между суммами по специальным сделкам РЕПО ¹</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1198</td>\n",
+       "      <td>2020-09-04</td>\n",
+       "      <td>1010.00</td>\n",
+       "      <td>Вариационная маржа;</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>767 rows × 3 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "-313446.62000000046"
+       "           date    amount  \\\n",
+       "284  2020-04-01   -260.77   \n",
+       "285  2020-04-01    251.77   \n",
+       "286  2020-04-01   -338.15   \n",
+       "981  2020-04-01 -36025.00   \n",
+       "292  2020-04-02     -4.94   \n",
+       "...         ...       ...   \n",
+       "1197 2020-09-03     -6.50   \n",
+       "831  2020-09-04   -936.70   \n",
+       "830  2020-09-04   -275.65   \n",
+       "832  2020-09-04   -244.77   \n",
+       "1198 2020-09-04   1010.00   \n",
+       "\n",
+       "                                                                                                                description  \n",
+       "284                                                               Вознаграждение Брокера; Комиссия банка за Спецсделки РЕПО  \n",
+       "285                                                                         Сальдо расчётов по сделкам с ценными бумагами;   \n",
+       "286                                             Вознаграждение Брокера; Разница между суммами по специальным сделкам РЕПО ¹  \n",
+       "981                                                                                                    Вариационная маржа;   \n",
+       "292   Вознаграждение Брокера; Комиссия за брокерские услуги по проведению расчетов по заключенным сделкам на Основном рынке  \n",
+       "...                                                                                                                     ...  \n",
+       "1197   Вознаграждение Брокера; Комиссия за брокерские услуги по проведению расчетов по заключенным сделкам на Срочном рынке  \n",
+       "831                                                                         Сальдо расчётов по сделкам с ценными бумагами;   \n",
+       "830                                                               Вознаграждение Брокера; Комиссия банка за Спецсделки РЕПО  \n",
+       "832                                             Вознаграждение Брокера; Разница между суммами по специальным сделкам РЕПО ¹  \n",
+       "1198                                                                                                   Вариационная маржа;   \n",
+       "\n",
+       "[767 rows x 3 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "read_vtb_broker_reports(r'Брокерские отчёты XML/').amount.sum()"
+    "transactions[transactions['date'] >= '2020-04-01']"
    ]
   },
   {
