--- a/Statment_processing.ipynb
+++ b/Statment_processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -355,104 +355,91 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>433</td>\n",
-       "      <td>2020-04-01</td>\n",
-       "      <td>251.77</td>\n",
-       "      <td>Сальдо расчётов по сделкам с ценными бумагами;</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>436</td>\n",
-       "      <td>2020-04-02</td>\n",
-       "      <td>-4.94</td>\n",
-       "      <td>Вознаграждение Брокера; Комиссия за брокерские услуги по проведению расчетов по заключенным сделкам на Основном рынке</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <td>438</td>\n",
        "      <td>2020-04-02</td>\n",
-       "      <td>5000.00</td>\n",
+       "      <td>5000.0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>439</td>\n",
+       "      <td>444</td>\n",
        "      <td>2020-04-02</td>\n",
-       "      <td>-2.00</td>\n",
-       "      <td>Вознаграждение Брокера; Комиссия банка за заключение сделок на Срочном рынке</td>\n",
+       "      <td>-5000.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>440</td>\n",
-       "      <td>2020-04-02</td>\n",
-       "      <td>-5.36</td>\n",
-       "      <td>Вознаграждение Брокера; Комиссия за брокерские услуги по проведению расчетов по заключенным сделкам на Срочном рынке</td>\n",
+       "      <td>446</td>\n",
+       "      <td>2020-04-03</td>\n",
+       "      <td>-5000.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>447</td>\n",
+       "      <td>2020-04-03</td>\n",
+       "      <td>5000.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>448</td>\n",
+       "      <td>2020-04-03</td>\n",
+       "      <td>-5000.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1152</td>\n",
+       "      <td>2020-08-26</td>\n",
+       "      <td>-65000.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1170</td>\n",
+       "      <td>2020-08-31</td>\n",
+       "      <td>90000.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1175</td>\n",
+       "      <td>2020-08-31</td>\n",
+       "      <td>-90000.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1185</td>\n",
+       "      <td>2020-09-02</td>\n",
+       "      <td>50000.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1188</td>\n",
        "      <td>2020-09-02</td>\n",
-       "      <td>-50000.00</td>\n",
+       "      <td>-50000.0</td>\n",
        "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1191</td>\n",
-       "      <td>2020-09-03</td>\n",
-       "      <td>-10515.03</td>\n",
-       "      <td>Сальдо расчётов по сделкам с ценными бумагами;</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1195</td>\n",
-       "      <td>2020-09-03</td>\n",
-       "      <td>-1.00</td>\n",
-       "      <td>Вознаграждение Брокера; Комиссия банка за заключение сделок на Срочном рынке</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1196</td>\n",
-       "      <td>2020-09-03</td>\n",
-       "      <td>-6.50</td>\n",
-       "      <td>Вознаграждение Брокера; Комиссия за брокерские услуги по проведению расчетов по заключенным сделкам на Срочном рынке</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1197</td>\n",
-       "      <td>2020-09-04</td>\n",
-       "      <td>-936.70</td>\n",
-       "      <td>Сальдо расчётов по сделкам с ценными бумагами;</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>354 rows × 3 columns</p>\n",
+       "<p>157 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "           date    amount  \\\n",
-       "433  2020-04-01    251.77   \n",
-       "436  2020-04-02     -4.94   \n",
-       "438  2020-04-02   5000.00   \n",
-       "439  2020-04-02     -2.00   \n",
-       "440  2020-04-02     -5.36   \n",
-       "...         ...       ...   \n",
-       "1188 2020-09-02 -50000.00   \n",
-       "1191 2020-09-03 -10515.03   \n",
-       "1195 2020-09-03     -1.00   \n",
-       "1196 2020-09-03     -6.50   \n",
-       "1197 2020-09-04   -936.70   \n",
+       "           date   amount description\n",
+       "438  2020-04-02   5000.0         NaN\n",
+       "444  2020-04-02  -5000.0         NaN\n",
+       "446  2020-04-03  -5000.0         NaN\n",
+       "447  2020-04-03   5000.0         NaN\n",
+       "448  2020-04-03  -5000.0         NaN\n",
+       "...         ...      ...         ...\n",
+       "1152 2020-08-26 -65000.0         NaN\n",
+       "1170 2020-08-31  90000.0         NaN\n",
+       "1175 2020-08-31 -90000.0         NaN\n",
+       "1185 2020-09-02  50000.0         NaN\n",
+       "1188 2020-09-02 -50000.0         NaN\n",
        "\n",
-       "                                                                                                                description  \n",
-       "433                                                                         Сальдо расчётов по сделкам с ценными бумагами;   \n",
-       "436   Вознаграждение Брокера; Комиссия за брокерские услуги по проведению расчетов по заключенным сделкам на Основном рынке  \n",
-       "438                                                                                                                     NaN  \n",
-       "439                                            Вознаграждение Брокера; Комиссия банка за заключение сделок на Срочном рынке  \n",
-       "440    Вознаграждение Брокера; Комиссия за брокерские услуги по проведению расчетов по заключенным сделкам на Срочном рынке  \n",
-       "...                                                                                                                     ...  \n",
-       "1188                                                                                                                    NaN  \n",
-       "1191                                                                        Сальдо расчётов по сделкам с ценными бумагами;   \n",
-       "1195                                           Вознаграждение Брокера; Комиссия банка за заключение сделок на Срочном рынке  \n",
-       "1196   Вознаграждение Брокера; Комиссия за брокерские услуги по проведению расчетов по заключенным сделкам на Срочном рынке  \n",
-       "1197                                                                        Сальдо расчётов по сделкам с ценными бумагами;   \n",
-       "\n",
-       "[354 rows x 3 columns]"
+       "[157 rows x 3 columns]"
       ]
      },
      "metadata": {},
@@ -706,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -837,13 +824,13 @@
        "[767 rows x 3 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "transactions[transactions['date'] >= '2020-04-01']"
+    "transactions[transactions['date'] >= '2020-04-01' & ]"
    ]
   },
   {
