--- a/Statment_processing.ipynb
+++ b/Statment_processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
@@ -20,7 +20,8 @@
       "Счёт 510-1 - добавлено документов: 0\n",
       "Счёт 510-5 - добавлено документов: 0\n",
       "Счёт 761-0 - добавлено документов: 0\n",
-      "Счёт 760-53 - добавлено документов: 0\n"
+      "Счёт 760-53 - добавлено документов: 0\n",
+      "Добавлено операций купли-продажи ценных бумаг: 0\n"
      ]
     }
    ],
@@ -38,6 +39,7 @@
     "from datetime import datetime\n",
     "\n",
     "pd.set_option('max_colwidth', 160)\n",
+    "pd.set_option('mode.chained_assignment', None)\n",
     "\n",
     "conn_str = r\"Driver={Microsoft Access Driver (*.mdb, *.accdb)};\"\\\n",
     "    r\"DBQ=C:\\Users\\gdoku\\YandexDisk\\Документы\\Семейные финансы\\FF.accdb;\"\n",
@@ -230,6 +232,109 @@
     "    return transactions\n",
     "\n",
     "\n",
+    "def vtb_broker_security_deals(path):\n",
+    "    \"\"\"Считываем данные по движению денежных средств из брокерского отчёта Банка ВТБ в формате xml\"\"\"\n",
+    "\n",
+    "    directory = r'C:/Users/gdoku/YandexDisk/Документы/Договоры/Банк ВТБ (ПАО)/'\n",
+    "    files = os.listdir(os.path.join(directory, path))\n",
+    "    files = [os.path.join(directory, path, file) for file in files]\n",
+    "    file = max(files, key=os.path.getctime)\n",
+    "\n",
+    "    # Считываем данные из файлов\n",
+    "    tree = ET.parse(os.path.join(directory, path, file))\n",
+    "    root = tree.getroot()\n",
+    "    json = xmljson.gdata.data(root[17][0])\n",
+    "    json = json['{report577p_v1}Подробности9_Collection']['{report577p_v1}Подробности9']\n",
+    "        security_deals = pd.DataFrame(json)\n",
+    "\n",
+    "\n",
+    "    # Обработка данных\n",
+    "    security_deals = security_deals[['NameBeg9', 'curs_datebeg9', 'currency_ISO9',\n",
+    "                                     'NameEnd9', 'currency_paym7', 'deal_cost7',\n",
+    "                                     'bank_сommition7', 'deal_code5', 'deal_code1']]\n",
+    "    security_deals.columns = ['security', 'date', 'deal_type', 'quantity',\n",
+    "                              'amount', 'accumulated_coupon', 'deal_сommission', 'bank_сommission', 'deal_code']\n",
+    "    security_deals.loc[:, 'date'] = pd.to_datetime(\n",
+    "        security_deals.loc[:, 'date'], format='%Y-%m-%d').dt.normalize()\n",
+    "    security_deals.loc[:, 'security'] = security_deals.security.apply(lambda x: x[-12:])\n",
+    "    security_deals.loc[:, 'quantity'] = security_deals.apply(\n",
+    "        lambda x: x.quantity if x.deal_type == 'Покупка' else -x.quantity, axis=1)\n",
+    "    security_deals.loc[:, 'amount'] = security_deals.apply(\n",
+    "        lambda x: x.amount if x.deal_type == 'Покупка' else -x.amount, axis=1)\n",
+    "    security_deals.loc[:, 'accumulated_coupon'] = security_deals.apply(\n",
+    "        lambda x: x.accumulated_coupon if x.deal_type == 'Покупка' else -x.accumulated_coupon, axis=1)\n",
+    "    security_deals.loc[:, 'сommission'] = security_deals.deal_сommission + security_deals.bank_сommission\n",
+    "    security_deals = security_deals.iloc[:,[0,1,3,4,5,8,9]]\n",
+    "\n",
+    "    return security_deals\n",
+    "\n",
+    "def new_security_deals(security_deals):\n",
+    "    \"\"\"Подготовка таблицы для загрузки.\"\"\"\n",
+    "\n",
+    "    start_date = '2020-01-01'\n",
+    "    conn = pyodbc.connect(conn_str)\n",
+    "    SQL = 'SELECT DISTINCT [003_Факты].transaction_code \\\n",
+    "            FROM 003_Факты INNER JOIN \\\n",
+    "            004_Проводки ON [003_Факты].ФактНом = [004_Проводки].ФактНом \\\n",
+    "            WHERE ((([003_Факты].transaction_code) Is Not Null) AND \\\n",
+    "                    ([004_Проводки].СинтСчётНом=581 Or [004_Проводки].СинтСчётНом=582))'\n",
+    "    base = pd.read_sql(SQL, conn)\n",
+    "    security_deals = security_deals[~security_deals.deal_code.isin(base['transaction_code'])]\n",
+    "    security_deals = security_deals[security_deals.date >= start_date]\n",
+    "\n",
+    "    SQL = 'SELECT СинтСчётНом AS syn_acc, АналСчётНом AS anal_acc, acc_code \\\n",
+    "            FROM 002_АналСчета \\\n",
+    "            WHERE (СинтСчётНом=581 Or СинтСчётНом=582) AND acc_code Is Not Null'\n",
+    "    mapping = pd.read_sql(SQL, conn)\n",
+    "    security_deals = pd.merge(security_deals, mapping, how='left',\n",
+    "                              left_on=['security'],\n",
+    "                              right_on=['acc_code']).iloc[:, [0, 1, 2, 3, 4, 5, 6, 7, 8]]\n",
+    "    conn.close()\n",
+    "\n",
+    "    return security_deals\n",
+    "\n",
+    "\n",
+    "def security_deals_upload_to_base(security_deals):\n",
+    "    \"\"\"Функция загрузки новых проводок в базу.\"\"\"\n",
+    "\n",
+    "    security_deals = new_security_deals(security_deals)\n",
+    "    conn = pyodbc.connect(conn_str)\n",
+    "    cur = conn.cursor()\n",
+    "\n",
+    "    # Проведение проводок\n",
+    "    post = 'Купля-продажа ЦБ'\n",
+    "    for i, row in security_deals.iterrows():\n",
+    "        k = 0\n",
+    "        cur.execute('INSERT INTO 003_Факты ( Дата, СобНаим, transaction_code ) VALUES(?, ?, ?)',\n",
+    "                    row['date'], post, row['deal_code'])\n",
+    "        post_id = cur.execute('SELECT Max(ФактНом) FROM 003_Факты WHERE СобНаим = ?',\n",
+    "                              post).fetchall()[0][0]\n",
+    "        cur.execute('INSERT INTO 004_Проводки VALUES(?, ?, ?, ?, ?, ?)',\n",
+    "                    post_id, k, row['syn_acc'], row['anal_acc'],\n",
+    "                    row['amount']-row['accumulated_coupon']+row['сommission'], row['quantity'])\n",
+    "        if row['syn_acc'] == 582:\n",
+    "            k += 1\n",
+    "            cur.execute('INSERT INTO 004_Проводки VALUES(?, ?, ?, ?, ?, ?)',\n",
+    "                        post_id, k, row['syn_acc'], row['anal_acc'],\n",
+    "                        row['accumulated_coupon'], 0)\n",
+    "        k += 1\n",
+    "        cur.execute('INSERT INTO 004_Проводки VALUES(?, ?, ?, ?, ?, ?)',\n",
+    "                    post_id, k, 760, 53, -row['amount'], 0)\n",
+    "        k += 1\n",
+    "        cur.execute('INSERT INTO 004_Проводки VALUES(?, ?, ?, ?, ?, ?)',\n",
+    "                    post_id, k, 760, 57, -row['сommission'], 0)\n",
+    "        if row['syn_acc'] == 581:\n",
+    "            k += 1\n",
+    "            cur.execute('INSERT INTO 004_Проводки VALUES(?, ?, ?, ?, ?, ?)',\n",
+    "                        post_id, k, 792, 19, -row['amount']-row['сommission'], 0)\n",
+    "            k += 1\n",
+    "            cur.execute('INSERT INTO 004_Проводки VALUES(?, ?, ?, ?, ?, ?)',\n",
+    "                        post_id, k, 792, 20, row['amount']+row['сommission'], 0)\n",
+    "    conn.commit()\n",
+    "    conn.close()\n",
+    "    print('Добавлено операций купли-продажи ценных бумаг: {}'.format(len(security_deals)))\n",
+    "\n",
+    "\n",
     "def upload_data(syn_acc, anal_acc, transactions, beg='2020-04-01'):\n",
     "    upload_to_base(syn_acc, anal_acc, transactions, beg)\n",
     "    if len(new_transactions(syn_acc, anal_acc, transactions, beg)) > 0:\n",
@@ -284,7 +389,12 @@
     "upload_data(761, 0, data, beg='2020-01-01')\n",
     "data = transactions[transactions.description ==\n",
     "                     'Вознаграждение Брокера; Разница между суммами по специальным сделкам РЕПО ¹'].copy()\n",
-    "upload_data(760, 53, data, beg='2020-01-01')"
+    "upload_data(760, 53, data, beg='2020-01-01')\n",
+    "\n",
+    "# Загрузка операций по основному брокерскому счёту\n",
+    "path = r'Георгий/Брокерские отчёты XML'\n",
+    "security_deals = vtb_broker_security_deals(path)\n",
+    "security_deals_upload_to_base(security_deals)"
    ]
   },
   {
