--- a/VTB_broker_report.ipynb
+++ b/VTB_broker_report.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
        "[350 rows x 7 columns]"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,14 +249,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Добавлено 0 операций купли-продажи ценных бумаг\n"
+      "Добавлено операций купли-продажи ценных бумаг: 350\n"
      ]
     }
    ],
@@ -275,14 +275,13 @@
     "    security_deals = security_deals[~security_deals.deal_code.isin(base['transaction_code'])]\n",
     "    security_deals = security_deals[security_deals.date >= start_date]\n",
     "\n",
-    "    SQL = 'SELECT СинтСчётНом AS syn_acc, АналСчётНом AS anal_acc, acc_code, [Акций в лоте] AS lot \\\n",
+    "    SQL = 'SELECT СинтСчётНом AS syn_acc, АналСчётНом AS anal_acc, acc_code \\\n",
     "            FROM 002_АналСчета \\\n",
     "            WHERE (СинтСчётНом=581 Or СинтСчётНом=582) AND acc_code Is Not Null'\n",
     "    mapping = pd.read_sql(SQL, conn)\n",
     "    security_deals = pd.merge(security_deals, mapping, how='left',\n",
     "                              left_on=['security'],\n",
-    "                              right_on=['acc_code']).iloc[:, [0, 1, 2, 3, 4, 5, 6, 7, 8, 10]]\n",
-    "\n",
+    "                              right_on=['acc_code']).iloc[:, [0, 1, 2, 3, 4, 5, 6, 7, 8]]\n",
     "    conn.close()\n",
     "\n",
     "    return security_deals\n",
@@ -305,7 +304,7 @@
     "                              post).fetchall()[0][0]\n",
     "        cur.execute('INSERT INTO 004_Проводки VALUES(?, ?, ?, ?, ?, ?)',\n",
     "                    post_id, k, row['syn_acc'], row['anal_acc'],\n",
-    "                    row['amount']-row['accumulated_coupon']+row['сommission'], row['quantity']/row['lot'])\n",
+    "                    row['amount']-row['accumulated_coupon']+row['сommission'], row['quantity'])\n",
     "        if row['syn_acc'] == 582:\n",
     "            k += 1\n",
     "            cur.execute('INSERT INTO 004_Проводки VALUES(?, ?, ?, ?, ?, ?)',\n",
@@ -326,32 +325,65 @@
     "                        post_id, k, 792, 20, row['amount']+row['сommission'], 0)\n",
     "    conn.commit()\n",
     "    conn.close()\n",
-    "    print('Добавлено {} операций купли-продажи ценных бумаг'.format(len(security_deals)))\n",
+    "    print('Добавлено операций купли-продажи ценных бумаг: {}'.format(len(security_deals)))\n",
     "\n",
     "\n",
-    "# df = new_security_deals(security_deals)[0]\n",
+    "# df = new_security_deals(security_deals)\n",
     "# df\n",
     "security_deals_upload_to_base(security_deals)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1"
+       "['C:/Users/gdoku/YandexDisk/Документы/Договоры/Банк ВТБ (ПАО)/Георгий/Брокерские отчёты XML\\\\72329080_20200101_20200917_381428.xml']"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(df)"
+    "path = r'Георгий/Брокерские отчёты XML'\n",
+    "directory = r'C:/Users/gdoku/YandexDisk/Документы/Договоры/Банк ВТБ (ПАО)/'\n",
+    "files = os.listdir(os.path.join(directory, path))\n",
+    "files = [os.path.join(directory, path, file) for file in files]\n",
+    "files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:/Users/gdoku/YandexDisk/Документы/Договоры/Банк ВТБ (ПАО)/Георгий/Брокерские отчёты XML\\\\72329080_20200101_20200917_381428.xml'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max(files, key=os.path.getctime)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.path.getctime"
    ]
   },
   {
